--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -282,6 +282,10 @@
                                                                 <ProgressBar
                                                                     Margin="0,5,0,0"
                                                                     Maximum="100"
+                                                                    Value="{Binding CurrentProgress^}" />
+                                                                <ProgressBar
+                                                                    Margin="0,5,0,0"
+                                                                    Maximum="100"
                                                                     Value="{Binding TotalProgress^}" />
                                                             </StackPanel>
                                                         </Border>
