--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
@@ -1,10 +1,11 @@
-<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="using:FileTime.GuiApp.Converters">
+<ResourceDictionary
+    xmlns="https://github.com/avaloniaui"
+    xmlns:converters="using:FileTime.GuiApp.Converters"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/Brushes.axaml"></ResourceInclude>
+                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/Brushes.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </ResourceDictionary.MergedDictionaries>
@@ -26,18 +27,20 @@
         x:Key="ItemViewModeToBackgroundConverter" />
     <converters:NamePartShrinkerConverter x:Key="NamePartShrinkerConverter" />
     <converters:ItemViewModelIsAttributeTypeConverter x:Key="ItemViewModelIsAttributeTypeConverter" />
-    <converters:ItemViewModelIsAttributeTypeConverter Invert="true"
-                                                      x:Key="ItemViewModelIsNotAttributeTypeConverter" />
+    <converters:ItemViewModelIsAttributeTypeConverter Invert="true" x:Key="ItemViewModelIsNotAttributeTypeConverter" />
     <converters:GetFileExtensionConverter x:Key="GetFileExtensionConverter" />
     <converters:FormatSizeConverter x:Key="FormatSizeConverter" />
     <converters:DateTimeConverter x:Key="DateTimeConverter" />
     <converters:SplitStringConverter x:Key="SplitStringConverter" />
     <converters:CompareConverter x:Key="EqualityConverter" />
-    <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}"
-                                 x:Key="NotEqualsConverter" />
+    <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}" x:Key="NotEqualsConverter" />
     <converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter" />
     <converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter" />
     <converters:ItemToImageConverter x:Key="ItemToImageConverter" />
-    <converters:StringReplaceConverter x:Key="PathPreformatter" OldValue="://" NewValue="/"/>
-    <converters:ContextMenuGenerator x:Key="ContextMenuGenerator"/>
+    <converters:StringReplaceConverter
+        NewValue="/"
+        OldValue="://"
+        x:Key="PathPreformatter" />
+    <converters:ContextMenuGenerator x:Key="ContextMenuGenerator" />
+    <converters:TextDecorationConverter x:Key="TextDecorationConverter" />
 </ResourceDictionary>
