--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -11,6 +11,7 @@
     RequestedThemeVariant="Dark"
     Title="FileTime"
     TransparencyLevelHint="Blur"
+    d:DataContext="vm:MainWindowDesignViewModel"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d"
