--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
@@ -1,6 +1,4 @@
-<Styles
-    xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Styles.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -20,6 +18,9 @@
     </Style>
     <Style Selector="TextBlock.ExtraSmallText">
         <Setter Property="FontSize" Value="11" />
+    </Style>
+    <Style Selector="TextBlock.ErrorText">
+        <Setter Property="Foreground" Value="{DynamicResource ErrorBrush}" />
     </Style>
     <Style Selector="TextBox">
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}" />
@@ -77,10 +78,10 @@
                 <ControlTemplate>
                     <Border>
                         <RadioButton
-                            VerticalAlignment="Center"
                             Content="{TemplateBinding ContentPresenter.Content}"
                             Foreground="{DynamicResource ForegroundBrush}"
-                            IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" />
+                            IsChecked="{Binding Path=IsSelected, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                            VerticalAlignment="Center" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -90,9 +91,9 @@
     <Style Selector="Image.LoadingAnimation">
         <Style.Animations>
             <Animation
+                Duration="0:0:2"
                 Easing="QuadraticEaseInOut"
-                IterationCount="INFINITE"
-                Duration="0:0:2">
+                IterationCount="INFINITE">
                 <KeyFrame Cue="0%">
                     <Setter Property="RotateTransform.Angle" Value="45" />
                 </KeyFrame>
